--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ cortex-m-rt = "0.6.12"
 cortex-m-semihosting = "~0.3"
 panic-semihosting = "~0.5"
 nb = "~0.1"
+panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
+rtt-target = { version = "0.2", features = ["cortex-m"] }
 
 [features]
 rt = ["nrf52840-hal/rt"]
