--- a/Embed.toml
+++ b/Embed.toml
@@ -1,4 +1,4 @@
-[probe]
+[default.probe]
 # The index of the probe in the connected probe list.
 #probe_selector = "1366:1015"
 # The protocol to be used for communicating with the target.
@@ -6,26 +6,31 @@ protocol = "Swd"
 # The speed in kHz of the data link to the target.
 speed = 1000
 
-[flashing]
+[default.flashing]
 # Whether or not the target should be flashed.
 enabled = true
-# Whether or not the target should be halted after flashing.
-halt_afterwards = false
 # Whether or not bytes erased but not rewritten with data from the ELF
 # should be restored with their contents before erasing.
 restore_unwritten_bytes = false
 # The path where an SVG of the assembled flash layout should be written to.
 # flash_layout_output_path = "out.svg"
 
-[general]
+[default.reset]
+# Whether or not the target should be reset.
+# When flashing is enabled as well, the target will be reset after flashing.
+enabled = true
+# Whether or not the target should be halted after flashing.
+halt_afterwards = false
+
+[default.general]
 # The chip name of the chip to be debugged.
 chip = "nrf52840_xxaa"
 # A list of chip descriptions to be loaded during runtime.
 chip_descriptions = []
 # The default log level to be used.
-log_level = "Warn"
+log_level = "WARN"
 
-[rtt]
+[default.rtt]
 # Whether or not an RTTUI should be opened after flashing.
 # This is exclusive and cannot be used with GDB at the moment.
 enabled = true
@@ -37,8 +42,12 @@ channels = [
 timeout = 3000
 # Whether timestamps in the RTTUI are enabled
 show_timestamps = true
+# Whether to save rtt history buffer on exit.
+log_enabled = false
+# Where to save rtt history buffer relative to manifest path.
+log_path = "./logs"
 
-[gdb]
+[default.gdb]
 # Whether or not a GDB server should be opened after flashing.
 # This is exclusive and cannot be used with RTT at the moment.
 enabled = false
