--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,16 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-cortex-m = { version = "0.5.4", features = [ "const-fn" ] }
-cortex-m-rt = "0.6.12"
-embedded-hal = "0.2.3"
-nrf52840-hal = "0.10.0"
+cortex-m = "0.7"
+embedded-hal = "0.2"
+nrf52840-hal = "0.13.0"
 
 [dev-dependencies]
-cortex-m-rt = "0.6.12"
-cortex-m-semihosting = "~0.3"
-panic-semihosting = "~0.5"
-nb = "~0.1"
-panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
-rtt-target = { version = "0.2", features = ["cortex-m"] }
+cortex-m-rt = ">=0.6, <0.8"
+nb = "1.0.0"
+panic-halt = "0.2.0"
+panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
+rtt-target = { version = "0.3.1", features = ["cortex-m"] }
 
 [features]
 rt = ["nrf52840-hal/rt"]
