--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -2,7 +2,7 @@ required_approvals = 1
 block_labels = ["wip"]
 delete_merged_branches = true
 status = [
-    "Rustfmt",
+    "fmt",
     "build (stable)",
     "build (MSRV)",
 ]
